# PhyloPack

./: .gitignore  README.md  phylopack.py  placement.py  py_attotree.py  pyproject.toml  requirements.txt  setup.py  split_cluster.py
phylopack/: cli.py
phylopack/preorder/: placement.py  preorder.py  py_attotree.py  split_cluster.py
tests/data/: genomes.txt
