[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phylopack"
version = "0.1.0"
description = "Phylogenetic compression preprocessing and batching pipeline"
authors = [{ name = "Tam Truong", email = "minhtamtruongkhac@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "attotree==0.1.6",
    "ete3==3.1.3",
    "numpy==1.24.4",
    "six==1.17.0",
]

[project.scripts]
phylopack = "phylopack.cli:main"
